--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000">
     <title>Unbxd SDK playground</title>
     <!--required frame works should be loaded here-->
+    <meta content
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
         rel="stylesheet" />
 
